@@ -54,6 +54,7 @@ set(CLAZY_CHECKS_SRCS
   ${CMAKE_CURRENT_LIST_DIR}/src/checks/level1/ruleoftwosoft.cpp
   ${CMAKE_CURRENT_LIST_DIR}/src/checks/level1/post-event.cpp
   ${CMAKE_CURRENT_LIST_DIR}/src/checks/level1/incorrect-emit.cpp
+  ${CMAKE_CURRENT_LIST_DIR}/src/checks/level1/virtual-signal.cpp
   ${CMAKE_CURRENT_LIST_DIR}/src/checks/level2/base-class-event.cpp
   ${CMAKE_CURRENT_LIST_DIR}/src/checks/level2/container-inside-loop.cpp
   ${CMAKE_CURRENT_LIST_DIR}/src/checks/level2/function-args-by-ref.cpp
